refactor: проведена оптимизация логики
* refactor: ключи redis теперь хранятся в отдельном конфиге

* refactor: логика проверки кода регистрации разветвлена для Fail fast

* refactor: исправлена инициализация сервиса в провайдере

* feat: добавлен эндпоинт для получения списка ролей

* chore: обновлена openapi.json

* refactor: переписана логика возврата ошибок (статус-кодов)

* refactor: адаптированы тесты под новые реалии
